--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -386,6 +386,7 @@ $spacers: (
   8: $spacer * 3.5, // 56px
   9: $spacer * 4, // 64px
   10: $spacer * 4.5, // 72px
+  20: $spacer * 9, // 144px
 ) !default;
 // scss-docs-end spacer-variables-maps
 
